dark mode background mobile fix

--- a/assets/styles/dark/app.scss
+++ b/assets/styles/dark/app.scss
@@ -58,7 +58,7 @@ body[theme=dark] {
     .demo-3 {
         figure {
             img {
-                border: solid 5px rgba(0, 0, 0, 0.5);
+                border: solid 3px #c3c3c3;
             }
             figcaption {
                 background-color: rgba(0, 0, 0, 0.5);
